--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
   },
   "scripts": {
     "start-feature": "PORT=3007 NODE_ENV=development NOTIFICATION_USERNAME=test NOTIFICATION_PASSWORD=test ENABLE_CASE_COMMENTS=true ENABLE_CASE_PROGRESS=true ENABLE_APP_INSIGHTS=true ENABLE_HEARING_OUTCOMES=true HEARING_OUTCOMES_PAGE_SIZE=2 PAC_ENV=dev node $NODE_DEBUG_OPTION ./bin/www | bunyan -o short",
-    "start-feature:dev": "PORT=3007 NOMIS_AUTH_URL=http://localhost:9091/auth NODE_ENV=development NOTIFICATION_USERNAME=test NOTIFICATION_PASSWORD=test HEARING_OUTCOMES_PAGE_SIZE=2 nodemon $NODE_DEBUG_OPTION ./bin/www | bunyan -o short",
+    "start-feature:dev": "PORT=3007 NOMIS_AUTH_URL=http://localhost:9091/auth NODE_ENV=development NOTIFICATION_USERNAME=test NOTIFICATION_PASSWORD=test ENABLE_HEARING_OUTCOMES=true HEARING_OUTCOMES_PAGE_SIZE=2 nodemon $NODE_DEBUG_OPTION ./bin/www | bunyan -o short",
     "delete:reports": "rm ./test-results/cypress/* || true",
     "preint-test": "npm run delete:reports",
     "preint-test:dev": "npm run delete:reports",
-    "int-test": "npx cypress run",
+    "int-test": "npx cypress run --browser chrome",
     "int-test:ui": "npx cypress open",
     "lint": "npx standard",
     "css-build": "bash ./bin/build-css",
@@ -109,7 +109,7 @@
     "ajv": "8.11.0",
     "ajv-errors": "3.0.0",
     "axe-core": "4.4.1",
-    "cypress": "^9.7.0",
+    "cypress": "^13.6.1",
     "cypress-axe": "0.14.0",
     "cypress-cucumber-preprocessor": "4.3.1",
     "husky": "8.0.1",
