--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "url": "https://github.com/ministryofjustice/prepare-a-case.git"
   },
   "engines": {
-    "node": ">=16.17.0 <18.0.0",
-    "npm": ">=8.0.0"
+    "node": "^20",
+    "npm": "^10"
   },
   "scripts": {
     "start-feature": "PORT=3007 NODE_ENV=development NOTIFICATION_USERNAME=test NOTIFICATION_PASSWORD=test ENABLE_CASE_COMMENTS=true ENABLE_CASE_PROGRESS=true ENABLE_APP_INSIGHTS=true ENABLE_HEARING_OUTCOMES=true HEARING_OUTCOMES_PAGE_SIZE=2 PAC_ENV=dev node $NODE_DEBUG_OPTION ./bin/www | bunyan -o short",
@@ -73,7 +73,7 @@
     "agentkeepalive": "^4.2.1",
     "applicationinsights": "2.3.3",
     "applicationinsights-native-metrics": "0.0.7",
-    "axios": "0.26.1",
+    "axios": "1.1.0",
     "axios-middleware": "0.3.1",
     "bootstrap": "^5.3.2",
     "bunyan": "1.8.15",
@@ -120,7 +120,7 @@
     "mockdate": "3.0.5",
     "moxios": "0.4.0",
     "nock": "^13.2.4",
-    "node-sass": "^7.0.3",
+    "node-sass": "^9.0.0",
     "nodemon": "^2.0.19",
     "redis-mock": "0.56.3",
     "standard": "17.0.0",
