--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "debug": "4.3.4",
     "dotenv": "16.0.0",
     "express": "4.18.1",
+    "express-http-proxy": "^2.0.0",
     "express-session": "1.17.3",
     "express-validator": "6.14.0",
     "govuk-frontend": "^5.1.0",
