--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "usePathForSuiteName": true
   },
   "dependencies": {
-    "@ministryofjustice/frontend": "1.4.1",
+    "@ministryofjustice/frontend": "^2.1.0",
     "@splidejs/splide": "^4.1.4",
     "accessible-autocomplete": "^2.0.4",
     "agentkeepalive": "^4.2.1",
@@ -73,7 +73,7 @@
     "express": "4.18.1",
     "express-session": "1.17.3",
     "express-validator": "6.14.0",
-    "govuk-frontend": "4.2.0",
+    "govuk-frontend": "^5.1.0",
     "helmet": "4.6.0",
     "jsonwebtoken": "9.0.0",
     "jwt-decode": "3.1.2",
@@ -91,6 +91,7 @@
     "jest": "^29.7.0",
     "jest-junit": "13.2.0",
     "jest-pact": "^0.11.0",
+    "jquery": "^3.7.1",
     "mockdate": "3.0.5",
     "moxios": "0.4.0",
     "nock": "^13.2.4",
